# WSL-For-FreeBSD

./: README.md
FreeBSD/: CMakeLists.txt  Makefile  Makefile.freebsd  binfmt_handler.h  build_freebsd.sh  build_lib9p.sh  config_parser.h  cross_build.sh  dns_tunneling.h  drvfs_mount.h  gns_engine.h  hvbridge.c  hvinit.c  interop_server.h  logger.h  network_config.h  pkg-descr  pkg-plist  plan9_server.h  port_tracker.h  terminal_notify.h  timezone_handler.h  wsl-interop.c  wsl_conf_parser.h  wsl_init  wsl_interop.h  wslinfo.c  wslpath.c
FreeBSD/test/: Makefile  hvbridge_tcp  hvbridge_tcp.c  hvinit_tcp  hvinit_tcp.c  run_test.py  run_test.sh  test_conf_headers  test_conf_minimal  wsl-interop  wsl_mock_host  wsl_mock_host.c  wsl_protocol.h  wslinfo  wslpath
src/windows/service/exe/: LxssUserSession.cpp  WslCoreInstance.cpp  WslCoreVm.cpp  WslCoreVm.h
tools/: build-host.py  configure-build.py  inject-into-vhdx.py  prefetch-deps.py  setup-freebsd-vhdx.py
